hydroflow/tests/snapshots/surface_keyed_fold__keyed_fold_tick@graphvis_mermaid.snap
---
source: hydroflow/tests/surface_keyed_fold.rs
expression: df.meta_graph().unwrap().to_mermaid()
---
%%{init:{'theme':'base','themeVariables':{'clusterBkg':'#ddd','clusterBorder':'#888'}}}%%
flowchart TD
classDef pullClass fill:#02f,color:#fff,stroke:#000,text-align:left,white-space:pre
classDef pushClass fill:#ff0,stroke:#000,text-align:left,white-space:pre
linkStyle default stroke:#aaa,stroke-width:4px,color:red,font-size:1.5em;
subgraph sg_1v1 ["sg_1v1 stratum 0"]
    1v1[\"(1v1) <code>source_stream(items_recv)</code>"/]:::pullClass
end
subgraph sg_2v1 ["sg_2v1 stratum 1"]
    2v1[\"<div style=text-align:center>(2v1)</div> <code>keyed_fold::&lt;<br>    'tick,<br>&gt;(Vec::new, |old: &amp;mut Vec&lt;u32&gt;, mut x: Vec&lt;u32&gt;| old.append(&amp;mut x))</code>"/]:::pullClass
    3v1[/"(3v1) <code>for_each(|v| result_send.send(v).unwrap())</code>"\]:::pushClass
    2v1--->3v1
end
1v1--->4v1
4v1["(4v1) <code>handoff</code>"]:::otherClass
4v1===o2v1

